@@ -419,7 +419,7 @@ namespace Server.Mobiles
 		public virtual void BreathStallMovement()
 		{
 			if ( m_AI != null )
-				m_AI.NextMove = DateTime.Now + TimeSpan.FromSeconds( BreathStallTime );
+				m_AI.NextMove = Core.Now + TimeSpan.FromSeconds( BreathStallTime );
 		}
 
 		public virtual void BreathPlayAngerSound()
@@ -510,7 +510,7 @@ namespace Server.Mobiles
 			if ( m_EndFlee == DateTime.MinValue )
 				return false;
 
-			if ( DateTime.Now >= m_EndFlee )
+			if ( Core.Now >= m_EndFlee )
 			{
 				StopFlee();
 				return false;
@@ -521,7 +521,7 @@ namespace Server.Mobiles
 
 		public virtual void BeginFlee( TimeSpan maxDuration )
 		{
-			m_EndFlee = DateTime.Now + maxDuration;
+			m_EndFlee = Core.Now + maxDuration;
 		}
 
 		public BaseAI AIObject{ get{ return m_AI; } }
@@ -938,7 +938,7 @@ namespace Server.Mobiles
 
 		public void Unpacify()
 		{
-			BardEndTime = DateTime.Now;
+			BardEndTime = Core.Now;
 			BardPacified = false;
 		}
 
@@ -1124,7 +1124,7 @@ namespace Server.Mobiles
 
 			m_bTamable = false;
 
-			m_NextReaquireTime = DateTime.Now + ReaquireDelay;
+			m_NextReaquireTime = Core.Now + ReaquireDelay;
 
 			ChangeAIType(AI);
 
@@ -1364,7 +1364,7 @@ namespace Server.Mobiles
 				if ( m_bSummoned )
 				{
 					m_SummonEnd = reader.ReadDeltaTime();
-					new UnsummonTimer( m_ControlMaster, this, m_SummonEnd - DateTime.Now ).Start();
+					new UnsummonTimer( m_ControlMaster, this, m_SummonEnd - Core.Now ).Start();
 				}
 
 				m_iControlSlots = reader.ReadInt();
@@ -1639,9 +1639,9 @@ namespace Server.Mobiles
 								{
 									if ( BondingBegin == DateTime.MinValue )
 									{
-										BondingBegin = DateTime.Now;
+										BondingBegin = Core.Now;
 									}
-									else if ( (BondingBegin + BondingDelay) <= DateTime.Now )
+									else if ( (BondingBegin + BondingDelay) <= Core.Now )
 									{
 										IsBonded = true;
 										BondingBegin = DateTime.MinValue;
@@ -2153,7 +2153,7 @@ namespace Server.Mobiles
 				if ( m_bSummoned == value )
 					return;
 
-				m_NextReaquireTime = DateTime.Now;
+				m_NextReaquireTime = Core.Now;
 
 				m_bSummoned = value;
 				Delta( MobileDelta.Noto );
@@ -2750,7 +2750,7 @@ namespace Server.Mobiles
 			{
 				// idling...
 
-				if ( DateTime.Now >= m_IdleReleaseTime )
+				if ( Core.Now >= m_IdleReleaseTime )
 				{
 					m_IdleReleaseTime = DateTime.MinValue;
 					return false; // idle is over
@@ -2762,7 +2762,7 @@ namespace Server.Mobiles
 			if ( 95 > Utility.Random( 100 ) )
 				return false; // not idling, but don't want to enter idle state
 
-			m_IdleReleaseTime = DateTime.Now + TimeSpan.FromSeconds( Utility.RandomMinMax( 15, 25 ) );
+			m_IdleReleaseTime = Core.Now + TimeSpan.FromSeconds( Utility.RandomMinMax( 15, 25 ) );
 
 			if ( Body.IsHuman )
 			{
@@ -3853,7 +3853,7 @@ namespace Server.Mobiles
 				if ( owner == null || owner.Deleted || owner.Map != this.Map || !owner.InRange( this, 12 ) || !this.CanSee( owner ) || !this.InLOS( owner ) )
 				{
 					if ( this.OwnerAbandonTime == DateTime.MinValue )
-						this.OwnerAbandonTime = DateTime.Now;
+						this.OwnerAbandonTime = Core.Now;
 				}
 				else
 				{
@@ -4058,7 +4058,7 @@ namespace Server.Mobiles
 			}
 
 			new UnsummonTimer( caster, creature, duration ).Start();
-			creature.m_SummonEnd = DateTime.Now + duration;
+			creature.m_SummonEnd = Core.Now + duration;
 
 			creature.MoveToWorld( p, caster.Map );
 
@@ -4083,7 +4083,7 @@ namespace Server.Mobiles
 
 		public virtual void OnThink()
 		{
-			if ( EnableRummaging && CanRummageCorpses && !Summoned && !Controled && DateTime.Now >= m_NextRummageTime )
+			if ( EnableRummaging && CanRummageCorpses && !Summoned && !Controled && Core.Now >= m_NextRummageTime )
 			{
 				double min, max;
 
@@ -4099,17 +4099,17 @@ namespace Server.Mobiles
 				}
 
 				double delay = min + (Utility.RandomDouble() * (max - min));
-				m_NextRummageTime = DateTime.Now + TimeSpan.FromMinutes( delay );
+				m_NextRummageTime = Core.Now + TimeSpan.FromMinutes( delay );
 			}
 
-			if ( HasBreath && !Summoned && DateTime.Now >= m_NextBreathTime ) // tested: controled dragons do breath fire, what about summoned skeletal dragons?
+			if ( HasBreath && !Summoned && Core.Now >= m_NextBreathTime ) // tested: controled dragons do breath fire, what about summoned skeletal dragons?
 			{
 				Mobile target = this.Combatant;
 
 				if ( target != null && target.Alive && !target.IsDeadBondedPet && CanBeHarmful( target ) && target.Map == this.Map && !IsDeadBondedPet && target.InRange( this, BreathRange ) && InLOS( target ) && !BardPacified )
 					BreathStart( target );
 
-				m_NextBreathTime = DateTime.Now + TimeSpan.FromSeconds( BreathMinDelay + (Utility.RandomDouble() * BreathMaxDelay) );
+				m_NextBreathTime = Core.Now + TimeSpan.FromSeconds( BreathMinDelay + (Utility.RandomDouble() * BreathMaxDelay) );
 			}
 		}
 
@@ -4187,7 +4187,7 @@ namespace Server.Mobiles
 				BardMaster = master;
 				BardTarget = target;
 				Combatant = target;
-				BardEndTime = DateTime.Now + TimeSpan.FromSeconds( 30.0 );
+				BardEndTime = Core.Now + TimeSpan.FromSeconds( 30.0 );
 
 				if ( target is BaseCreature )
 				{
@@ -4198,7 +4198,7 @@ namespace Server.Mobiles
 					t.BardMaster = master;
 					t.BardTarget = this;
 					t.Combatant = this;
-					t.BardEndTime = DateTime.Now + TimeSpan.FromSeconds( 30.0 );
+					t.BardEndTime = Core.Now + TimeSpan.FromSeconds( 30.0 );
 				}
 			}
 			else
@@ -4306,7 +4306,7 @@ namespace Server.Mobiles
 			if ( owner == null || owner.Deleted || owner.Map != this.Map || !owner.InRange( this, 12 ) || !this.CanSee( owner ) || !this.InLOS( owner ) )
 			{
 				if ( this.OwnerAbandonTime == DateTime.MinValue )
-					this.OwnerAbandonTime = DateTime.Now;
+					this.OwnerAbandonTime = Core.Now;
 			}
 			else
 			{
@@ -4360,7 +4360,7 @@ namespace Server.Mobiles
 
 		public LoyaltyTimer() : base( InternalDelay, InternalDelay )
 		{
-			m_NextHourlyCheck = DateTime.Now + TimeSpan.FromHours( 1.0 );
+			m_NextHourlyCheck = Core.Now + TimeSpan.FromHours( 1.0 );
 			Priority = TimerPriority.FiveSeconds;
 		}
 
@@ -4368,10 +4368,10 @@ namespace Server.Mobiles
 
 		protected override void OnTick() 
 		{ 
-			bool hasHourElapsed = ( DateTime.Now >= m_NextHourlyCheck );
+			bool hasHourElapsed = ( Core.Now >= m_NextHourlyCheck );
 
 			if ( hasHourElapsed )
-				m_NextHourlyCheck = DateTime.Now + TimeSpan.FromHours( 1.0 );
+				m_NextHourlyCheck = Core.Now + TimeSpan.FromHours( 1.0 );
 
 			ArrayList toRelease = new ArrayList();
 
@@ -4397,8 +4397,8 @@ namespace Server.Mobiles
 						if ( owner == null || owner.Deleted || owner.Map != c.Map || !owner.InRange( c, 12 ) || !c.CanSee( owner ) || !c.InLOS( owner ) )
 						{
 							if ( c.OwnerAbandonTime == DateTime.MinValue )
-								c.OwnerAbandonTime = DateTime.Now;
-							else if ( (c.OwnerAbandonTime + c.BondingAbandonDelay) <= DateTime.Now )
+								c.OwnerAbandonTime = Core.Now;
+							else if ( (c.OwnerAbandonTime + c.BondingAbandonDelay) <= Core.Now )
 								toRemove.Add( c );
 						}
 						else
