@@ -41,7 +41,7 @@ namespace Server.Misc
 			{
 				AggressorInfo info = (AggressorInfo)list[i];
 
-				if ( info.Attacker == m2 && DateTime.Now < (info.LastCombatTime + Delay) )
+				if ( info.Attacker == m2 && Core.Now < (info.LastCombatTime + Delay) )
 					return true;
 			}
 
@@ -51,7 +51,7 @@ namespace Server.Misc
 			{
 				AggressorInfo info = (AggressorInfo)list[i];
 
-				if ( info.Attacker == m1 && DateTime.Now < (info.LastCombatTime + Delay) )
+				if ( info.Attacker == m1 && Core.Now < (info.LastCombatTime + Delay) )
 					return true;
 			}
 
