@@ -157,7 +157,7 @@ namespace Server.Mobiles
 			pack.Visible = false;
 			AddItem( pack );
 
-			m_LastRestock = DateTime.Now;
+			m_LastRestock = Core.Now;
 		}
 		
 		public BaseVendor( Serial serial ) : base( serial )
@@ -206,7 +206,7 @@ namespace Server.Mobiles
 
 		protected void LoadSBInfo()
 		{
-			m_LastRestock = DateTime.Now;
+			m_LastRestock = Core.Now;
 
 			InitSBInfo();
 
@@ -464,7 +464,7 @@ namespace Server.Mobiles
 
 		public virtual void Restock()
 		{
-			m_LastRestock = DateTime.Now;
+			m_LastRestock = Core.Now;
 
 			IBuyItemInfo[] buyInfo = this.GetBuyInfo();
 
@@ -488,7 +488,7 @@ namespace Server.Mobiles
 				return;
 			}
 
-			if ( DateTime.Now - m_LastRestock > RestockDelay )
+			if ( Core.Now - m_LastRestock > RestockDelay )
 				Restock();
 
 			UpdateBuyInfo();
@@ -532,7 +532,7 @@ namespace Server.Mobiles
 
 				Item item = (Item)playerItems[i];
 
-				if ( (item.LastMoved + InventoryDecayTime) <= DateTime.Now )
+				if ( (item.LastMoved + InventoryDecayTime) <= Core.Now )
 					item.Delete();
 			}
 
