@@ -314,7 +314,7 @@ namespace Server.Mobiles
 			m_PayTimer = new PayTimer( this, delay );
 			m_PayTimer.Start();
 
-			m_NextPayTime = DateTime.Now + delay;
+			m_NextPayTime = Core.Now + delay;
 		}
 
 		public PlayerVendor( Serial serial ) : base( serial )
@@ -381,7 +381,7 @@ namespace Server.Mobiles
 						int price = reader.ReadInt();
 						string description = reader.ReadString();
 
-						DateTime created = version < 1 ? DateTime.Now : reader.ReadDateTime();
+						DateTime created = version < 1 ? Core.Now : reader.ReadDateTime();
 
 						if ( item != null )
 						{
@@ -407,7 +407,7 @@ namespace Server.Mobiles
 					Timer.DelayCall( TimeSpan.Zero, new TimerCallback( RemoveSandalsHue ) );
 				}
 
-				m_NextPayTime = DateTime.Now + PayTimer.GetInterval();
+				m_NextPayTime = Core.Now + PayTimer.GetInterval();
 
 				if ( newVendorSystemActivated )
 				{
@@ -416,7 +416,7 @@ namespace Server.Mobiles
 				}
 			}
 
-			TimeSpan delay = m_NextPayTime - DateTime.Now;
+			TimeSpan delay = m_NextPayTime - Core.Now;
 
 			m_PayTimer = new PayTimer( this, delay > TimeSpan.Zero ? delay : TimeSpan.Zero );
 			m_PayTimer.Start();
@@ -757,7 +757,7 @@ namespace Server.Mobiles
 
 		private VendorItem SetVendorItem( Item item, int price, string description )
 		{
-			return SetVendorItem( item, price, description, DateTime.Now );
+			return SetVendorItem( item, price, description, Core.Now );
 		}
 
 		private VendorItem SetVendorItem( Item item, int price, string description, DateTime created )
@@ -1082,7 +1082,7 @@ namespace Server.Mobiles
 			{
 				vendor.SayTo( from, 503202 ); // This item is not for sale.
 			}
-			else if ( vi.Created + TimeSpan.FromMinutes( 1.0 ) > DateTime.Now )
+			else if ( vi.Created + TimeSpan.FromMinutes( 1.0 ) > Core.Now )
 			{
 				from.SendMessage( "You cannot buy this item right now.  Please wait one minute and try again." );
 			}
@@ -1350,7 +1350,7 @@ namespace Server.Mobiles
 
 			protected override void OnTick()
 			{
-				m_Vendor.m_NextPayTime = DateTime.Now + this.Interval;
+				m_Vendor.m_NextPayTime = Core.Now + this.Interval;
 
 				int pay;
 				int totalGold;
