@@ -67,7 +67,7 @@ namespace Server.Mobiles
 
 			m_RentalGold = rentalGold;
 
-			m_RentalExpireTime = DateTime.Now + duration.Duration;
+			m_RentalExpireTime = Core.Now + duration.Duration;
 			m_RentalExpireTimer = new RentalExpireTimer( this, duration.Duration );
 			m_RentalExpireTimer.Start();
 		}
@@ -152,7 +152,7 @@ namespace Server.Mobiles
 
 		public void ComputeRentalExpireDelay( out int days, out int hours )
 		{
-			TimeSpan delay = RentalExpireTime - DateTime.Now;
+			TimeSpan delay = RentalExpireTime - Core.Now;
 
 			if ( delay <= TimeSpan.Zero )
 			{
@@ -391,7 +391,7 @@ namespace Server.Mobiles
 
 			m_RentalExpireTime = reader.ReadDeltaTime();
 
-			TimeSpan delay = m_RentalExpireTime - DateTime.Now;
+			TimeSpan delay = m_RentalExpireTime - Core.Now;
 			m_RentalExpireTimer = new RentalExpireTimer( this, delay > TimeSpan.Zero ? delay : TimeSpan.Zero );
 			m_RentalExpireTimer.Start();
 		}
@@ -418,7 +418,7 @@ namespace Server.Mobiles
 
 					m_Vendor.RentalPrice = renewalPrice;
 
-					m_Vendor.m_RentalExpireTime = DateTime.Now + m_Vendor.RentalDuration.Duration;
+					m_Vendor.m_RentalExpireTime = Core.Now + m_Vendor.RentalDuration.Duration;
 				}
 				else
 				{
